fixed body spacing our work page

--- a/src/sass/components/services.scss
+++ b/src/sass/components/services.scss
@@ -4,7 +4,7 @@
   // border: 5px solid pink;
 }
 
-  .body {
+  .services_body {
     max-width: 80%;
     margin: auto;
     position: relative;
